ainda nao esta funcionando, mas ta quase
