# docs/swagger.yaml
@@ -1,5 +1,18 @@
 basePath: /
 definitions:
+  jwt.Token:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      identifier:
+        type: string
+      mobile:
+        type: boolean
+      updated_at:
+        type: string
+    type: object
   url.PostURL:
     properties:
       keyword:
@@ -37,6 +50,50 @@ definitions:
         type: string
       url:
         example: https://www.google.com
+        type: string
+    type: object
+  user.PostUser:
+    properties:
+      keyword:
+        example: google
+        type: string
+      title:
+        example: Google Home
+        type: string
+      user:
+        example: https://www.google.com
+        type: string
+    type: object
+  user.User:
+    properties:
+      active:
+        example: false
+        type: boolean
+      created_at:
+        example: "2021-10-18T00:45:07.818344164-03:00"
+        type: string
+      email:
+        example: oliveira@live.it
+        type: string
+      id:
+        example: eed7df28-5a16-46f0-b5bf-c26071a42ade
+        type: string
+      last_login:
+        example: "2021-10-20T00:50:00.100059334-03:00"
+        type: string
+      name:
+        example: Wellington Oliveira
+        type: string
+      roles:
+        items:
+          type: string
+        type: array
+      token:
+        items:
+          $ref: '#/definitions/jwt.Token'
+        type: array
+      updated_at:
+        example: "2021-10-18T00:49:06.160059334-03:00"
         type: string
     type: object
 host: localhost:8080
@@ -184,4 +241,136 @@ paths:
       summary: Change or create URL item
       tags:
       - URL
+  /user/v1/users:
+    get:
+      consumes:
+      - application/json
+      description: Get details of all Users
+      parameters:
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Quantity of items
+        in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/user.User'
+            type: array
+      summary: Get details of all Users
+      tags:
+      - User
+    post:
+      consumes:
+      - application/json
+      description: Add a new User
+      parameters:
+      - description: User struct
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/user.PostUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: Add a new User
+      tags:
+      - User
+  /user/v1/users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete User item
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: Delete User item
+      tags:
+      - User
+    get:
+      consumes:
+      - application/json
+      description: Get User by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+        "404":
+          description: ""
+      summary: Get an User
+      tags:
+      - User
+    patch:
+      consumes:
+      - application/json
+      description: Change User item
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User struct
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/user.PostUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: Change User item
+      tags:
+      - User
+    put:
+      consumes:
+      - application/json
+      description: Change or create User item
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User struct
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/user.PostUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: Change or create User item
+      tags:
+      - User
 swagger: "2.0"
